# fraud-detection-mlops

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  README.md  README_HF.md  app.py  app_streamlit.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: main.yml  test.yml
.opencode/plans/: 1774575967235-stellar-nebula.md
data/: train.csv
models/: fraud_model.pkl  metrics.json
scripts/: generate_email_report.py  setup_secrets.sh  update_spaces.py  upload_to_hub.py
src/: __init__.py  data_preprocessing.py  model.py
tests/: __init__.py  test_model.py
